# OpsPilot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  drain3.ini  dvc.yaml  main_project.txt  main_project_full.txt  params.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  latency-report.yml
data/eval/: rag_gold.jsonl
docker/: api.Dockerfile  prometheus.yml  ui.Dockerfile
docs/: build_guide.md  data_licenses.md  demo_script.md  phase1_advanced.md  step_by_step_internals.md  system_design.md
examples/: curl_examples.sh
scripts/: bootstrap.sh  verify_imports.py
scripts/data/: download_all.py
scripts/eval/: run_eval.py
scripts/features/: build_features.py  parse_logs.py
scripts/rag/: build_index.py
scripts/train/: train_anomaly.py
src/opspilot/: __init__.py
src/opspilot/agent/: __init__.py  graph.py  prompts.py  safety.py  tools.py
src/opspilot/anomaly/: __init__.py  features.py  infer.py
src/opspilot/api/: deps.py  main.py  schemas.py
src/opspilot/api/routes/: __init__.py  admin.py  anomaly.py  feedback.py  health.py  incident.py  rag.py
src/opspilot/embeddings/: __init__.py  encoder.py
src/opspilot/observability/: __init__.py  logging.py  metrics.py
src/opspilot/rag/: __init__.py  bm25.py  chunking.py  docstore.py  index.py  retriever.py
src/opspilot/storage/: __init__.py  db.py  models.py
src/opspilot/workflows/: __init__.py  drift.py  prefect_flows.py
tests/: conftest.py  setup_dummy_test_data.py  test_agent_safety.py  test_api_contract.py
ui/: streamlit_app.py
