[tool.poetry]
name = "opspilot"
version = "0.1.0"
description = "Incident Response Copilot (AIOps + RAG + Agents)"
authors = ["Adarsh Mishra <adarshmishra121@github.com>"]
packages = [{ include = "opspilot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# --- Web framework ---
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.2"

# --- Database ---
sqlmodel = "^0.0.21"
psycopg = {extras = ["binary"], version = "^3.2.1"}

# --- HTTP client (for Ollama LLM calls) ---
httpx = "^0.27.0"

# --- Data / ML ---
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
pyyaml = "^6.0.2"

# --- Observability ---
structlog = "^24.2.0"
prometheus-fastapi-instrumentator = "^7.0.0"

# --- Caching ---
redis = "^5.0.7"
diskcache = "^5.6.3"

# --- RAG + Embeddings ---
sentence-transformers = "^3.0.1"
faiss-cpu = "^1.8.0.post1"
rank-bm25 = "^0.2.2"

# --- Agent orchestration ---
langgraph = "^0.2.25"
langchain-core = "^0.2.34"

# --- MLOps (optional — conflicts with drain3's cachetools pin) ---
# Install with: poetry install --with workflows
# prefect, evidently, mlflow moved to optional group below

# --- Log parsing ---
drain3 = "^0.9.11"

# --- Auth ---
PyJWT = "^2.9.0"

[tool.poetry.group.workflows]
optional = true

[tool.poetry.group.workflows.dependencies]
prefect = "^2.20.1"
evidently = "^0.4.36"
mlflow = "^2.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.5.7"
mypy = "^1.11.1"
types-PyYAML = "^6.0.12.20240808"

[tool.poetry.extras]
api = []
ui = ["streamlit"]

[tool.poetry.dependencies.streamlit]
version = "^1.37.0"
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
